WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154605
WKWebsiteDataStore should conform to NSCoding
https://bugs.webkit.org/show_bug.cgi?id=154605
Summary
WKWebsiteDataStore should conform to NSCoding
Anders Carlsson
Reported
2016-02-23 13:53:50 PST
WKWebsiteDataStore should conform to NSCoding
Attachments
Patch
(3.97 KB, patch)
2016-02-23 13:55 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-02-23 13:55:38 PST
Created
attachment 272050
[details]
Patch
Anders Carlsson
Comment 2
2016-02-23 14:08:05 PST
Committed
r196995
: <
http://trac.webkit.org/changeset/196995
>
Ryan Haddad
Comment 3
2016-02-23 15:33:01 PST
This appears to have caused an API test failure <
https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20WK2%20(Tests)/builds/3172
> Tests that failed: Coding.WKWebsiteDataStore_Default ASSERTION FAILED: mainThreadPthread /Volumes/Data/slave/elcapitan-debug/build/Source/WTF/wtf/mac/MainThreadMac.mm(218) : bool WTF::isMainThread() 1 0x106ac7c40 WTFCrash 2 0x106afb6b6 WTF::isMainThread() 3 0x106b29661 WTF::StringImpl::createCFString() 4 0x106b2ad84 WTF::StringImpl::operator NSString*() 5 0x108b83d37 WTF::String::operator NSString*() const 6 0x108be8aef API::WebsiteDataStore::cacheDirectoryFileSystemRepresentation(WTF::String const&) 7 0x108be8a57 API::WebsiteDataStore::defaultApplicationCacheDirectory() 8 0x108be9264 API::WebsiteDataStore::defaultDataStoreConfiguration() 9 0x108be8019 API::WebsiteDataStore::defaultDataStore() 10 0x109758e30 +[WKWebsiteDataStore defaultDataStore] 11 0x10524fd3a Coding_WKWebsiteDataStore_Default_Test::TestBody() 12 0x10529c07a testing::Test::Run() 13 0x10529c95d testing::internal::TestInfoImpl::Run() 14 0x10529d4fd testing::TestCase::Run() 15 0x1052a3482 testing::internal::UnitTestImpl::RunAllTests() 16 0x1052a30f9 testing::UnitTest::Run() 17 0x1051a988e TestWebKitAPI::TestsController::run(int, char**) 18 0x105249da4 main 19 0x7fff839bc5ad start
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug