WKWebsiteDataStore should conform to NSCoding https://bugs.webkit.org/show_bug.cgi?id=154605

Reviewed by Dan Bernstein.

Source/WebKit2:

* UIProcess/API/Cocoa/WKWebsiteDataStore.h:
* UIProcess/API/Cocoa/WKWebsiteDataStore.mm:
(-[WKWebsiteDataStore initWithCoder:]):
(-[WKWebsiteDataStore encodeWithCoder:]):

Tools:

* TestWebKitAPI/Tests/WebKit2Cocoa/Coding.mm:
(TEST):

Canonical link: https://commits.webkit.org/172701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196995 268f45cc-cd09-0410-ab3c-d52691b4dbfc